changes js files

--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
                     <button id = "ing">Generar ingredientes</button>
                 </table>
             </div>
+            <button id = "refrescar">Actualizar</button>
             <!-- <button type="submit" id="finalizar">Hacer pedido</button> -->
-            </div>
         </div>
+    </div>
 </body>
 </html>
