Añadir radiobutton a tamaños

--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
             <label for="zona">¿ Qué tamaños tenemos disponibles ?</label>
             <br>
             <div id = "personalizado">
-                <table id = "tablaDatos">
-
-                    <button id = "dato">Datos</button>  
-                </table>
-
+                <div id = "divTamaños">
+                    <button id = "dato">Datos</button>
+                    <div id="datosTamaños"></div>
+                </div>
                 <!-- <input type="radio" name="tamaño" value="peque"/> Pequeña<br> 
                 <input type="radio" name="tamaño" value="media"/> Mediana<br>
                 <input type="radio" name="tamaño" value="grande"/> Grande<br><br> -->
             </div>
+        
             <h2>Las más famosas</h2>
             <div id = "masVendidas">
                 <table id = "famosas">
