cambios en json

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             </div>
             <button id = "refrescar">Actualizar</button>
             <button type="submit" id="finalizar">Hacer pedido</button>
+            <h3 id = "precioPedido"></h3>
         </div>
     
     </div>
